# EssexEngineExampleGame

./: .gitignore  .gitmodules  CMakeConfig.txt  CMakeLists.txt  README.md
filesystem/: imgui.ini
filesystem/content/root/: main.json
filesystem/content/root/Maps/: level1.json  level2.json  main.json
filesystem/content/root/Tilesets/: Thumbs.db
filesystem/content/system/: emptymap.json
src/Drivers/MacOSDriver/: CMakeLists.txt
src/Drivers/MacOSDriver/src/: Entry.cpp  MacOSDriver.cpp  MacOSDriver.h
src/Drivers/OpenGlDriver/: CMakeLists.txt
src/Drivers/OpenGlDriver/src/: Entry.cpp  OpenGlDriver.cpp  OpenGlDriver.h  OpenGlSprite.cpp  OpenGlSprite.h
